src/objects/NPI_Customer_SA_Tracker__c.object
<CustomObject>
    <description>Object contains the customer initial launch records for MD and CP related to PMD products, NPI projects and Key Accounts.</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_ID__c</fullName>
        <externalId>true</externalId>
        <label>Device ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>NPI Customer SA Trackers</relationshipLabel>
        <relationshipName>NPI_Customer_SA_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account</label>
        <referenceTo>Key_Account__c</referenceTo>
        <relationshipLabel>NPI Customer SA Trackers</relationshipLabel>
        <relationshipName>NPI_Customer_SA_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPI_APC__c</fullName>
        <label>NPI APC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Country_Code__c</fullName>
        <label>NPI Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Country__c</fullName>
        <label>NPI Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Customer_Finance_Key_Account__c</fullName>
        <label>NPI Customer Finance Key Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Customer_Key_Account__c</fullName>
        <label>NPI Customer Key Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Customer__c</fullName>
        <label>NPI Customer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_FCS_Qty__c</fullName>
        <label>NPI First Customer Shipment (FCS) Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI_FSC_Date__c</fullName>
        <label>NPI First Customer Shipment (FSC) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_In_Market_Date__c</fullName>
        <label>NPI In Market Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_LE_Date__c</fullName>
        <label>NPI Lab Entry (LE) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_Market_Name__c</fullName>
        <label>NPI Market Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Model_Number__c</fullName>
        <label>NPI Model Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Project_ID__c</fullName>
        <label>NPI Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI_Project_Name__c</fullName>
        <label>NPI Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Record_Revised_By__c</fullName>
        <label>NPI Record Revised By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Record_Revision_Date__c</fullName>
        <label>NPI Record Revision Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NPI_Region__c</fullName>
        <label>NPI Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_SA_Date__c</fullName>
        <label>NPI Ship Authorization (SA) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_SA_Type__c</fullName>
        <label>NPI SA Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_SW_Platform_Version__c</fullName>
        <label>NPI SW Platform Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_SW_Platform__c</fullName>
        <label>NPI SW Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_SW_Stable_Line__c</fullName>
        <label>NPI SW Stable Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Sales_Model__c</fullName>
        <label>NPI Sales Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_Segment_Code__c</fullName>
        <label>NPI Segment Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI_TA_Date__c</fullName>
        <label>NPI Technical Acceptance (TA) Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMD_Product_ID__c</fullName>
        <label>PMD Product ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMD_Product_Name__c</fullName>
        <label>PMD Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMD_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMD Product</label>
        <referenceTo>PMD_Product__c</referenceTo>
        <relationshipLabel>NPI Customer SA Trackers</relationshipLabel>
        <relationshipName>NPI_Customer_SA_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMD_Program_ID__c</fullName>
        <label>PMD Program ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMD_Program_Name__c</fullName>
        <label>PMD Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMD_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMD Program</label>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>NPI Customer SA Trackers</relationshipLabel>
        <relationshipName>NPI_Customer_SA_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMD_Project_ID__c</fullName>
        <label>PMD Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMD_Project_Name__c</fullName>
        <label>PMD Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMD_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PMD Project</label>
        <referenceTo>PMD_Project__c</referenceTo>
        <relationshipLabel>NPI Customer SA Trackers</relationshipLabel>
        <relationshipName>NPI_Customer_SA_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Oracle_Part_Number__c</fullName>
        <label>Product Oracle Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NPI Customer SA Trackers</relationshipLabel>
        <relationshipName>NPI_Customer_SA_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SA_Status__c</fullName>
        <label>SA Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>NPI Customer SA Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Key_Account__c</columns>
        <columns>SA_Status__c</columns>
        <columns>NPI_SA_Date__c</columns>
        <columns>NPI_In_Market_Date__c</columns>
        <columns>NPI_SA_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Companion_Products</fullName>
        <columns>NAME</columns>
        <columns>Key_Account__c</columns>
        <columns>SA_Status__c</columns>
        <columns>NPI_SA_Date__c</columns>
        <columns>NPI_In_Market_Date__c</columns>
        <columns>NPI_SA_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Companion Products</value>
        </filters>
        <label>Companion Products</label>
    </listViews>
    <listViews>
        <fullName>Companion_Products_2013_SA_Date</fullName>
        <columns>NAME</columns>
        <columns>Key_Account__c</columns>
        <columns>SA_Status__c</columns>
        <columns>NPI_SA_Date__c</columns>
        <columns>NPI_In_Market_Date__c</columns>
        <columns>NPI_SA_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Companion Products</value>
        </filters>
        <filters>
            <field>NPI_SA_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>NPI_SA_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2013</value>
        </filters>
        <label>Companion Products 2013 SA Date</label>
    </listViews>
    <listViews>
        <fullName>Mobile_Devices</fullName>
        <columns>NAME</columns>
        <columns>Key_Account__c</columns>
        <columns>SA_Status__c</columns>
        <columns>NPI_SA_Date__c</columns>
        <columns>NPI_In_Market_Date__c</columns>
        <columns>NPI_SA_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Mobile Devices</value>
        </filters>
        <label>Mobile Devices</label>
    </listViews>
    <listViews>
        <fullName>Mobile_Devices_2013_SA_Date</fullName>
        <columns>NAME</columns>
        <columns>Key_Account__c</columns>
        <columns>SA_Status__c</columns>
        <columns>NPI_SA_Date__c</columns>
        <columns>NPI_In_Market_Date__c</columns>
        <columns>NPI_SA_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Mobile Devices</value>
        </filters>
        <filters>
            <field>NPI_SA_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>NPI_SA_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2013</value>
        </filters>
        <label>Mobile Devices 2013 SA Date</label>
    </listViews>
    <nameField>
        <label>Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPI Customer SA Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>